Use setuptools instead of distribute (which is part of devel)
By building the package with setuptools, we ensure it is compatible
with pip 10 and above which require file manifests to be packaged.

Change-Id: I6da38bad79128a66ef2f4e4929529769cc36f916

--- a/openstack/XStatic-Bootstrap-Datepicker/XStatic-Bootstrap-Datepicker.spec.j2
+++ b/openstack/XStatic-Bootstrap-Datepicker/XStatic-Bootstrap-Datepicker.spec.j2
@@ -1,14 +1,18 @@
+{% set pypi_name = 'XStatic-Bootstrap-Datepicker' %}
+{% set upstream_version = upstream_version('1.3.1.0') %}
+{% set rpm_release = '1' %}
+{% set source = url_pypi() %}
+
 %global sname XStatic-Bootstrap-Datepicker
-Name:           {{ py2name('XStatic-Bootstrap-Datepicker') }}
-Version:        1.3.1.0
-Release:        0
+Name:           {{ py2name() }}
+Version:        {{ py2rpmversion() }}
+Release:        {{ py2rpmrelease() }}
 Summary:        Bootstrap-Datepicker %{version} (XStatic packaging standard)
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 URL:            https://git.openstack.org/cgit/openstack/{sname}/
-Source0:        https://files.pythonhosted.org/packages/source/X/%{sname}/%{sname}-%{version}.tar.gz
+Source0:        {{ source }}
 BuildRequires:  openstack-macros
-BuildRequires:  {{ py2pkg('devel') }}
 BuildRequires:  {{ py2pkg('setuptools') }}
 Requires:       {{ py2pkg('XStatic') }}
 BuildArch:      noarch
@@ -17,7 +21,7 @@ BuildArch:      noarch
 Bootstrap-Datepicker javascript library packaged for setuptools (easy_install) / pip.
 
 %prep
-%autosetup -n %{sname}-%{version}
+%autosetup -n %{sname}-{{ upstream_version }}
 %py_req_cleanup
 
 %build
@@ -29,7 +33,7 @@ Bootstrap-Datepicker javascript library packaged for setuptools (easy_install) /
 %files
 %doc README.txt
 %{python2_sitelib}/xstatic
-%{python2_sitelib}/XStatic_Bootstrap_Datepicker-%{version}-py?.?.egg-info
-%{python2_sitelib}/XStatic_Bootstrap_Datepicker-%{version}-py?.?-nspkg.pth
+%{python2_sitelib}/XStatic_Bootstrap_Datepicker-*-py?.?.egg-info
+%{python2_sitelib}/XStatic_Bootstrap_Datepicker-*-py?.?-nspkg.pth
 
 %changelog
