--- a/openstack/osprofiler/osprofiler.spec.j2
+++ b/openstack/osprofiler/osprofiler.spec.j2
@@ -7,6 +7,10 @@ License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            https://launchpad.net/osprofiler
 Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.tar.gz
+# backport sql collector -- https://github.com/openstack/osprofiler/commit/032a21861854c5f63a039c997a58b4a979e62750
+Patch0:         0001-Add-sqlalchemy-collector.patch
+# https://review.openstack.org/#/c/642407/
+Patch1:         0001-Don-t-fail-if-sqlalchemy-driver-fails-to-initialize.patch
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('WebOb') }}
 BuildRequires:  {{ py2pkg('python-ceilometerclient') }}
@@ -49,7 +53,7 @@ BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 Documentation for OSProfiler.
 
 %prep
-%autosetup -n %{sname}-%{version}
+%autosetup -p1 -n %{sname}-%{version}
 %py_req_cleanup
 sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
