Use setuptools instead of distribute (which is part of devel)
By building the package with setuptools, we ensure it is compatible
with pip 10 and above which require file manifests to be packaged.

Change-Id: I8df42c896fa76cdabd12578cb0f6b6637d609465

--- a/openstack/karbor/karbor.spec.j2
+++ b/openstack/karbor/karbor.spec.j2
@@ -29,7 +29,6 @@ BuildRequires:  {{ py2pkg('abclient') }}
 BuildRequires:  {{ py2pkg('bcrypt') }}
 BuildRequires:  {{ py2pkg('python-cinderclient') }}
 BuildRequires:  {{ py2pkg('croniter') }}
-BuildRequires:  {{ py2pkg('devel') }}
 BuildRequires:  {{ py2pkg('eventlet') }}
 BuildRequires:  {{ py2pkg('fixtures') }}
 BuildRequires:  {{ py2pkg('freezegun') }}
@@ -60,6 +59,7 @@ BuildRequires:  {{ py2pkg('oslo.service') }}
 BuildRequires:  {{ py2pkg('oslo.versionedobjects') }}
 BuildRequires:  {{ py2pkg('reno') }}
 BuildRequires:  {{ py2pkg('requests') }}
+BuildRequires:  {{ py2pkg('setuptools') }}
 BuildRequires:  {{ py2pkg('six') }}
 BuildRequires:  {{ py2pkg('sqlalchemy-migrate') }}
 BuildRequires:  {{ py2pkg('stevedore') }}
