--- a/openstack/keystone/keystone.spec.j2
+++ b/openstack/keystone/keystone.spec.j2
@@ -23,7 +23,6 @@ BuildRequires:  {{ py2pkg('Flask', py_versions=['py3']) }}
 BuildRequires:  {{ py2pkg('Flask-RESTful', py_versions=['py3']) }}
 BuildRequires:  {{ py2pkg('WebTest', py_versions=['py3']) }}
 BuildRequires:  {{ py2pkg('bcrypt', py_versions=['py3']) }}
-BuildRequires:  {{ py2pkg('devel', py_versions=['py3']) }}
 BuildRequires:  {{ py2pkg('fixtures', py_versions=['py3']) }}
 BuildRequires:  {{ py2pkg('freezegun', py_versions=['py3']) }}
 BuildRequires:  {{ py2pkg('jsonschema', py_versions=['py3']) }}
@@ -44,6 +43,7 @@ BuildRequires:  {{ py2pkg('pbr', py_versions=['py3']) }}
 BuildRequires:  {{ py2pkg('pysaml2', py_versions=['py3']) }}
 BuildRequires:  {{ py2pkg('requests', py_versions=['py3']) }}
 BuildRequires:  {{ py2pkg('scrypt', py_versions=['py3']) }}
+BuildRequires:  {{ py2pkg('setuptools', py_versions=['py3']) }}
 BuildRequires:  {{ py2pkg('sqlparse', py_versions=['py3']) }}
 BuildRequires:  {{ py2pkg('stestr', py_versions=['py3']) }}
 BuildRequires:  {{ py2pkg('testresources', py_versions=['py3']) }}
