Remove explict sed for doc build warnings
This is now obsolete, as the %py_req_cleanup macro does that
as a side-effect.

Change-Id: I1251abaa5be4bd69e9966d4ee1b49034a362c4ef

--- a/openstack/tripleo-common/tripleo-common.spec.j2
+++ b/openstack/tripleo-common/tripleo-common.spec.j2
@@ -79,7 +79,7 @@ don't fit in a product.
 
 %prep
 %autosetup -n %{sname}-%{version}
-sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
+%py_req_cleanup
 
 %build
 %{py2_build}
