--- a/openstack/python-novaclient/python-novaclient.spec.j2
+++ b/openstack/python-novaclient/python-novaclient.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'python-novaclient' %}
-{% set upstream_version = upstream_version('11.0.0') %}
+{% set upstream_version = upstream_version('13.0.0') %}
 {% set rpm_release = '1' %}
 {% set source = url_pypi() %}
 
@@ -60,6 +60,7 @@ Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 BuildRequires:  {{ py2pkg('reno') }}
+BuildRequires:  {{ py2pkg('sphinxcontrib-apidoc') }}
 
 %description -n python-novaclient-doc
 This is a client for the OpenStack Nova API. There's a Python API (the
@@ -75,9 +76,9 @@ This package contains auto-generated documentation.
 %build
 %{python_build}
 
-%{__python2} setup.py build_sphinx
+PBR_VERSION={{ upstream_version }} sphinx-build -b html -d doc/build/doctrees doc/source doc/build/html
 # Fix hidden-file-or-dir warnings
-rm -fr html/.doctrees html/.buildinfo
+rm -fr doc/build/html/.doctrees doc/build/html/.buildinfo
 
 %install
 %{python_install}
