--- a/openstack/python-mistralclient/python-mistralclient.spec.j2
+++ b/openstack/python-mistralclient/python-mistralclient.spec.j2
@@ -1,5 +1,5 @@
 Name:           {{ py2name('python-mistralclient') }}
-Version:        3.7.0
+Version:        3.8.0
 Release:        0
 Summary:        Python API and CLI for OpenStack Mistral
 License:        {{ license('Apache-2.0') }}
@@ -41,6 +41,7 @@ Summary:        Documentation for OpenStack Mistral API client libary
 Group:          Documentation/HTML
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
+BuildRequires:  {{ py2pkg('sphinxcontrib-apidoc') }}
 
 %description doc
 Client library for Mistral built on the Mistral API. It provides a Python API
@@ -55,8 +56,9 @@ This package contains the documentation.
 %py2_build
 
 # Build HTML docs and man page
-%{__python2} setup.py build_sphinx -b man
-rm -rf html/.{doctrees,buildinfo}
+PBR_VERSION=%{version} sphinx-build -b html doc/source doc/build/html
+PBR_VERSION=%{version} sphinx-build -b man doc/source doc/build/man
+rm -r doc/build/html/.{doctrees,buildinfo}
 
 %install
 %py2_install
