taskflow: networkx needs pydot during taskflow's tests
however pydot is not a hard requirement for networkx and on SUSE
it is just a recommends which causes import failures during %check
phase.

Traceback (most recent call last):
  File "taskflow/tests/unit/test_types.py", line 122, in test_pydot_output
    self.assertEqual(expected.lstrip(), g.export_to_dot())
  File "taskflow/types/graph.py", line 178, in export_to_dot
    return nx_pydot.to_pydot(self).to_string()
  File "/usr/lib/python2.7/site-packages/networkx/drawing/nx_pydot.py", line 199, in to_pydot
    pydot = _import_pydot()
  File "/usr/lib/python2.7/site-packages/networkx/drawing/nx_pydot.py", line 348, in _import_pydot
    import pydot
ImportError: No module named pydot

master had a fix in: I2bd46e8616d10f1dde32231ea0264626658eb115

Change-Id: Idf8bd343ac3e11897c6a4b060cff13d1e25515ea

--- a/openstack/taskflow/taskflow.spec.j2
+++ b/openstack/taskflow/taskflow.spec.j2
@@ -32,6 +32,7 @@ BuildRequires:  {{ py2pkg('oslo.utils', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('oslotest', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('pbr', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('psycopg2', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('pydot', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('pydotplus', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('redis', py_versions=['py2', 'py3']) }}
 BuildRequires:  {{ py2pkg('retrying', py_versions=['py2', 'py3']) }}
