neutron: replace ryu with os-ken
This was done upstream in Ic721efc7cd0066be0ea7b6239b273e656643e9c1

Change-Id: Ic4d55a2d6d2f109bc3c2be8cecf97c7fe7a5ed9b

--- a/openstack/neutron/neutron.spec.j2
+++ b/openstack/neutron/neutron.spec.j2
@@ -71,6 +71,7 @@ BuildRequires:  {{ py2pkg('keystonemiddleware') }}
 BuildRequires:  {{ py2pkg('neutron-lib') }}
 BuildRequires:  {{ py2pkg('python-neutronclient') }}
 BuildRequires:  {{ py2pkg('python-novaclient') }}
+BuildRequires:  {{ py2pkg('os-ken') }}
 BuildRequires:  {{ py2pkg('os-xenapi') }}
 BuildRequires:  {{ py2pkg('oslo.cache') }}
 BuildRequires:  {{ py2pkg('oslo.privsep') }}
@@ -82,7 +83,6 @@ BuildRequires:  {{ py2pkg('ovs') }}
 BuildRequires:  {{ py2pkg('ovsdbapp') }}
 BuildRequires:  {{ py2pkg('pecan') }}
 BuildRequires:  {{ py2pkg('pyroute2') }}
-BuildRequires:  {{ py2pkg('ryu') }}
 BuildRequires:  {{ py2pkg('weakrefmethod') }}
 Requires:       {{ py2pkg('Jinja2') }}
 Requires:       {{ py2pkg('Paste') }}
@@ -102,6 +102,7 @@ Requires:       {{ py2pkg('netifaces') }}
 Requires:       {{ py2pkg('neutron-lib') }}
 Requires:       {{ py2pkg('python-neutronclient') }}
 Requires:       {{ py2pkg('python-novaclient') }}
+Requires:       {{ py2pkg('os-ken') }}
 Requires:       {{ py2pkg('os-xenapi') }}
 Requires:       {{ py2pkg('oslo.cache') }}
 Requires:       {{ py2pkg('oslo.concurrency') }}
@@ -128,7 +129,6 @@ Requires:       {{ py2pkg('pecan') }}
 Requires:       {{ py2pkg('psutil') }}
 Requires:       {{ py2pkg('pyroute2') }}
 Requires:       {{ py2pkg('requests') }}
-Requires:       {{ py2pkg('ryu') }}
 Requires:       {{ py2pkg('six') }}
 Requires:       {{ py2pkg('stevedore') }}
 Requires:       {{ py2pkg('tenacity') }}
