--- a/openstack/python-watcherclient/python-watcherclient.spec.j2
+++ b/openstack/python-watcherclient/python-watcherclient.spec.j2
@@ -1,5 +1,5 @@
 Name:           {{ py2name('python-watcherclient') }}
-Version:        2.1.0
+Version:        2.2.0
 Release:        0
 Summary:        Python API and CLI for OpenStack Watcher
 License:        {{ license('Apache-2.0') }}
@@ -21,7 +21,7 @@ BuildRequires:  {{ py2pkg('oslotest') }}
 BuildRequires:  {{ py2pkg('pbr') }}
 BuildRequires:  {{ py2pkg('python-subunit') }}
 BuildRequires:  {{ py2pkg('setuptools') }}
-BuildRequires:  {{ py2pkg('testrepository') }}
+BuildRequires:  {{ py2pkg('stestr') }}
 BuildRequires:  {{ py2pkg('testscenarios') }}
 BuildRequires:  {{ py2pkg('testtools') }}
 Requires:       {{ py2pkg('Babel') }}
@@ -67,8 +67,7 @@ rm -rf html/.{doctrees,buildinfo}
 %py2_install
 
 %check
-export OS_TEST_PATH=./watcherclient/tests/unit
-%{__python2} setup.py testr
+%{__python2} -m stestr.cli --test-path=./watcherclient/tests/unit run
 
 %files
 %doc README.rst
