neutron: update to 13.0.2
Change-Id: I374e88bc093082f7c14b2811332333aac610f227

--- a/openstack/neutron/neutron.spec.j2
+++ b/openstack/neutron/neutron.spec.j2
@@ -1,6 +1,6 @@
 %global with_doc 1
 %global sname neutron
-{% set upstream_version = '13.0.0.0b2' %}
+{% set upstream_version = '13.0.2' %}
 {% set rpm_release = '1' %}
 %if 0%{?rhel} || 0%{?fedora}
 %global rdo 1
