--- a/openstack/ovsdbapp/ovsdbapp.spec.j2
+++ b/openstack/ovsdbapp/ovsdbapp.spec.j2
@@ -2,6 +2,7 @@
 {% set pypi_name = 'ovsdbapp' %}
 {% set upstream_version = upstream_version('0.15.0') %}
 {% set rpm_release = '1' %}
+{% set source = url_pypi() %}
 Name:           {{ py2name() }}
 Version:        {{ py2rpmversion() }}
 Release:        {{ py2rpmrelease() }}
@@ -9,34 +10,34 @@ Summary:        A library for creating OVSDB applications
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 URL:            https://launchpad.net/{{ pypi_name }}
-Source0:        https://files.pythonhosted.org/packages/source/o/{{ pypi_name }}/{{ pypi_name }}-%{version}.tar.gz
+Source0:        {{ source }}
 BuildRequires:  openstack-macros
-BuildRequires:  python-devel
-BuildRequires:  {{ py2pkg('fixtures') }}
-BuildRequires:  {{ py2pkg('oslotest') }}
-BuildRequires:  {{ py2pkg('ovs') }}
-BuildRequires:  {{ py2pkg('pbr') }}
-BuildRequires:  {{ py2pkg('stestr') }}
-BuildRequires:  {{ py2pkg('testscenarios') }}
-BuildRequires:  {{ py2pkg('testtools') }}
+BuildRequires:  {{ py2pkg('fixtures', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('oslotest', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('ovs', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('pbr', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('stestr', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('testscenarios', py_versions=['py2', 'py3']) }}
+BuildRequires:  {{ py2pkg('testtools', py_versions=['py2', 'py3']) }}
 Requires:       {{ py2pkg('fixtures') }}
 Requires:       {{ py2pkg('netaddr') }}
 Requires:       {{ py2pkg('ovs') }}
 Requires:       {{ py2pkg('pbr') }}
 Requires:       {{ py2pkg('six') }}
 BuildArch:      noarch
+%python_subpackages
 
 %description
 The ovdsbapp library is useful for creating applications that communicate via
 Open_vSwitchs OVSDB protocol (https://tools.ietf.org/html/rfc7047). It wraps
 the Python 'ovs' and adds an event loop and friendly transactions.
 
-%package doc
+%package -n python-ovsdbapp-doc
 Summary:        Documentation for OpenStack log library
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
-%description doc
+%description -n python-ovsdbapp-doc
 Documentation for the ovsdbap library.
 
 %prep
@@ -44,27 +45,28 @@ Documentation for the ovsdbap library.
 %py_req_cleanup
 
 %build
-%{py2_build}
+%{python_build}
 
 # generate html docs
-%{__python2} setup.py build_sphinx
+PBR_VERSION={{ upstream_version }} PYTHONPATH=. \
+    sphinx-build -b html doc/source doc/build/html
 rm -rf doc/build/html/.{doctrees,buildinfo}
 
 %install
-%{py2_install}
+%{python_install}
 
 %if 0%{?with_tests}
 %check
-stestr run
+%python_exec -m stestr.cli run
 %endif
 
-%files
+%files %{python_files}
 %license LICENSE
 %doc ChangeLog README.rst
-%{python2_sitelib}/ovsdbapp
-%{python2_sitelib}/*.egg-info
+%{python_sitelib}/ovsdbapp
+%{python_sitelib}/*.egg-info
 
-%files doc
+%files -n python-ovsdbapp-doc
 %license LICENSE
 %doc doc/build/html
 
